@@ -1,0 +1,5 @@
+% @EXPECTED_RESULTS@: CORRECT
+
+main :-
+	write('Hello world!'),
+	nl.
