@@ -9,6 +9,7 @@ Version 4.0.0 - DEV
  - Update jscolor and sorttable javascript to latest upstream versions.
  - Misc. minor bugs fixed reported by Coverity scan.
  - Replace flex++ by flexc++, fixes a missing build dep. and code cleanup.
+ - Add support for new language: Prolog.
 
 Version 3.4.0 - (unreleased)
 ----------------------------
